# Quantitative-Analysis-of-Financial-Markets

./: README.md  defense.md  main.py  pyproject.toml  roadmap.md
notebook/: Notebook.ipynb
notebook/data/: AAPL.csv  GLD.csv  MSFT.csv  NVDA.csv  Notes.txt  TSLA.csv
presentation/: main.aux  main.tex
