[project]
name = "quantitative-analysis-of-financial-markets"
version = "0.1.0"
description = "Quantitative analysis of financial markets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "yfinance>=0.2.66",
]
